Feat: Add POST functionality to books
