# docs/swagger.yaml
@@ -52,6 +52,27 @@ paths:
       summary: Get all books
       tags:
       - books
+    post:
+      consumes:
+      - application/json
+      description: Create a new book in the database
+      parameters:
+      - description: Book
+        in: body
+        name: book
+        required: true
+        schema:
+          $ref: '#/definitions/models.Book'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.Book'
+      summary: Create a new book
+      tags:
+      - books
   /books/{id}:
     get:
       description: Get a book by its ID from the database
